* Add convenience properties for states on the text reading class * Fix the number of complete sections in the scoring * Adjust the grid row gap for text readings on the student profile page

--- a/user/static/css/user_profile.css
+++ b/user/static/css/user_profile.css
@@ -69,6 +69,9 @@ table td {
 
     margin-top: 10px;
     grid-template-columns: repeat(5, auto);
+
+    grid-row-gap: 15px;
+    row-gap: 15px;
 }
 
 .text_reading_actions {
